--- a/package.json
+++ b/package.json
@@ -1,27 +1,54 @@
 {
-    "name": "emiln",
-    "version": "0.0.1",
-    "description": "",
-    "main": "index.js",
-    "bin": {
-        "cligen": "./bin/index.js"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "mithrayls <mithray@protonmail.com> (https://mithrayls.github.io/)",
-    "license": "MIT",
-    "dependencies": {
-        "@hapi/hapi": "^18.3.2",
-        "@hapi/joi": "^15.1.1",
-        "change-case": "^3.1.0",
-        "chokidar": "^3.0.2",
-        "commander": "^3.0.1",
-        "node-fetch": "^2.6.0",
-        "query-string": "^6.8.3",
-        "read-pkg-up": "^6.0.0",
-        "yaml": "^1.6.0",
-        "yargs-parser": "^14.0.0"
-    }
+  "name": "emiln",
+  "version": "0.0.2",
+  "description": "![emiln](https://raw.githubusercontent.com/mithrayls/emiln/master/emiln.svg?sanitize=true)",
+  "main": "index.js",
+  "bin": {
+    "cligen": "./bin/index.js"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "mithrayls <mithray@protonmail.com> (https://mithrayls.github.io/)",
+  "license": "MIT",
+  "dependencies": {
+    "@hapi/hapi": "^18.3.2",
+    "@hapi/inert": "^5.2.2",
+    "@hapi/joi": "^15.1.1",
+    "@hapi/vision": "^5.5.4",
+    "base64-js": "^1.3.1",
+    "builtin-status-codes": "^3.0.0",
+    "change-case": "^3.1.0",
+    "chokidar": "^3.0.2",
+    "commander": "^3.0.1",
+    "core-js": "^3.2.1",
+    "hapi-swagger": "^10.1.1",
+    "ieee754": "^1.1.13",
+    "jsdom": "^15.1.1",
+    "mobx": "^4.13.0",
+    "node-fetch": "^2.6.0",
+    "query-string": "^6.8.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "read-pkg-up": "^6.0.0",
+    "redoc": "^2.0.0-rc.14",
+    "styled-components": "^4.3.2",
+    "swagger-markdown": "^1.2.0",
+    "to-arraybuffer": "^1.0.1",
+    "yaml": "^1.6.0",
+    "yargs-parser": "^14.0.0"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mithrayls/emiln.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mithrayls/emiln/issues"
+  },
+  "homepage": "https://github.com/mithrayls/emiln#readme"
 }
