--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
         "@hapi/vision": "^5.5.4",
         "change-case": "^3.1.0",
         "chokidar": "^3.0.2",
+        "cli-marked": "^4.9.14",
         "hapi-swagger": "^10.1.1",
         "jsdom": "^15.1.1",
         "node-fetch": "^2.6.0",
         "query-string": "^6.8.3",
         "read-pkg-up": "^6.0.0",
         "redoc-cli": "^0.8.6",
+        "songshu": "0.0.16",
         "swagger-markdown": "^1.2.0",
         "yaml": "^1.6.0",
         "yargs-parser": "^14.0.0"
