--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cli-marked": "^4.9.14",
         "hapi-swagger": "^10.1.1",
         "jsdom": "^15.1.1",
+        "lodash": "^4.17.15",
         "node-fetch": "^2.6.0",
         "query-string": "^6.8.3",
         "read-pkg-up": "^6.0.0",
