--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ node_modules
 node_modules
 node_modules
 node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
