--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "change-case": "^3.1.0",
         "chokidar": "^3.0.2",
         "cli-marked": "^4.9.14",
+        "cli-spinners": "^2.2.0",
+        "conjugate": "^1.0.4",
+        "en-inflectors": "^1.0.12",
         "hapi-swagger": "^10.1.1",
         "jsdom": "^15.1.1",
         "lodash": "^4.17.15",
@@ -28,6 +31,7 @@
         "read-pkg-up": "^6.0.0",
         "redoc-cli": "^0.8.6",
         "songshu": "0.0.16",
+        "spinnies": "^0.5.0",
         "swagger-markdown": "^1.2.0",
         "yaml": "^1.6.0",
         "yargs-parser": "^14.0.0"
